@@ -1,3 +1,7 @@
+2003-01-26  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>
+
+	* w3m-e21.el (w3m-favicon-type): Add BMP at the head of the list.
+
 2003-01-24  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3mhack.el (w3mhack-makeinfo): Withdraw the change of 2003-01-09.
